# pico-usb-audio

./: CMakeLists.txt  README.md  usb_sound_card.c
build-playground/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake
build-playground/apps/: cmake_install.cmake
build-playground/apps/popcorn/: cmake_install.cmake  popcorn.dis  popcorn.elf  popcorn.elf.map  popcorn.hex  popcorn.uf2
build-playground/apps/usb_sound_card/: cmake_install.cmake  usb_sound_card.dis  usb_sound_card.elf  usb_sound_card.elf.map  usb_sound_card.hex  usb_sound_card.uf2
build-playground/audio/: cmake_install.cmake
build-playground/audio/sine_wave/: cmake_install.cmake  sine_wave_i2s.dis  sine_wave_i2s.elf  sine_wave_i2s.elf.map  sine_wave_i2s.hex  sine_wave_i2s.uf2  sine_wave_pwm.dis  sine_wave_pwm.elf  sine_wave_pwm.elf.map  sine_wave_pwm.hex  sine_wave_pwm.uf2  sine_wave_spdif.dis  sine_wave_spdif.elf  sine_wave_spdif.elf.map  sine_wave_spdif.hex  sine_wave_spdif.uf2
build-playground/pico-sdk/: cmake_install.cmake
build-playground/pico-sdk/docs/: cmake_install.cmake
build-playground/pico-sdk/src/: cmake_install.cmake
build-playground/pico-sdk/tools/: cmake_install.cmake
build-playground/pico_extras/: cmake_install.cmake
build-playground/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt  pioasm.ilk
build-playground/reset/: cmake_install.cmake
build-playground/scanvideo/: cmake_install.cmake
build-playground/sleep/: cmake_install.cmake
build-playground/stdio/: cmake_install.cmake
(+341 files in other folders)
